アイコン変更

--- a/WindowPositionRestorerTaskIcon/DummyForm.resx
+++ b/WindowPositionRestorerTaskIcon/DummyForm.resx
@@ -134,4 +134,85 @@
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=
 </value>
   </data>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAIAICAAAAEAIACoEAAAJgAAACAgAgABAAEAMAEAAM4QAAAoAAAAIAAAAEAAAAABACAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMz
+        MwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMz
+        MwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMMMzMzATMzMwAzMzMAMzMzVDMz
+        M6kzMzNeMzMzDjMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMz
+        MwAzMzMAMzMzADMzMwAzMzMKMzMzSzMzMykzMzMAMzMzADMzMwAzMzMAMzMzBzMzM8EzMzOFMzMzADMz
+        MwAzMzOvMzMz/zMzM/8zMzP0MzMzmzMzMyEzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMz
+        MwAzMzMAMzMzADMzMwAzMzNEMzMzqDMzM/czMzP/MzMzoTMzMwAzMzMAMzMzADMzMwAzMzObMzMz/zMz
+        M/8zMzNZMzMzADMzM5YzMzPiMzMz/zMzM/8zMzP/MzMz+TMzM4czMzMFMzMzADMzMwAzMzMAMzMzADMz
+        MwAzMzMAMzMzADMzMwAzMzNDMzMzyzMzM/8zMzP/MzMz/zMzM/8zMzP1MzMzDTMzMwAzMzMAMzMzADMz
+        M1ozMzP/MzMz/zMzM+czMzMNMzMzADMzMwAzMzM2MzMzmTMzM/kzMzP/MzMz/zMzM8kzMzMTMzMzADMz
+        MwAzMzMAMzMzADMzMwAzMzMLMzMzoDMzM/8zMzP/MzMz/zMzM/4zMzPKMzMzhDMzM0ozMzMIMzMzADMz
+        MwAzMzMAMzMzADMzM7czMzP/MzMz/zMzM34zMzMAMzMzADMzMwAzMzMAMzMzHjMzM7czMzP/MzMz/zMz
+        M9IzMzMMMzMzADMzMwAzMzMAMzMzGjMzM9AzMzP/MzMz/zMzM9wzMzN2MzMzGTMzMwAzMzMAMzMzADMz
+        MwAzMzMAMzMzADMzMwAzMzMAMzMzRjMzM/8zMzP/MzMz3DMzMwAzMzMAMzMzADMzMwAzMzMAMzMzATMz
+        M44zMzP/MzMz/zMzM6IzMzMAMzMzADMzMxMzMzPWMzMz/zMzM+ozMzNhMzMzAzMzMwAzMzMAMzMzADMz
+        MwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMz6TMzM/8zMzP/MzMzMTMzMwAzMzMAMzMzADMz
+        MwAzMzMAMzMzATMzM7IzMzP/MzMz/zMzMzQzMzMBMzMztjMzM/8zMzPDMzMzFDMzMwAzMzMAMzMzADMz
+        MwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzOwMzMz/zMzM/8zMzNjMzMzADMz
+        MwAzMzMAMzMzADMzMwAzMzMAMzMzIzMzM/wzMzP/MzMzozMzM2EzMzP/MzMzyzMzMwkzMzMAMzMzADMz
+        MwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMzM4IzMzP/MzMz/zMz
+        M4szMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzwjMzM/8zMzPvMzMz5DMzM/wzMzMqMzMzADMz
+        MwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzcDMz
+        M/8zMzP/MzMz/jMzM/wzMzP8MzMz/DMzM/wzMzP8MzMz/DMzM/wzMzP+MzMz/zMzM/8zMzP/MzMz/zMz
+        M/wzMzP8MzMz/DMzM/wzMzP8MzMz/DMzM/wzMzP8MzMz/DMzMz8zMzMAMzMzADMzMwAzMzMAMzMzADMz
+        MwAzMzNfMzMz/zMzM/8zMzP/MzMz/zMzM/8zMzP/MzMz/zMzM/8zMzP/MzMz/zMzM/8zMzP/MzMz/zMz
+        M/8zMzP/MzMz/zMzM/8zMzP/MzMz/zMzM/8zMzP/MzMz/zMzM/8zMzP/MzMzQDMzMwAzMzMAMzMzADMz
+        MwAzMzMAMzMzADMzM1wzMzP/MzMz/zMzM/8zMzP/MzMz/zMzM/8zMzP/MzMz/zMzM/8zMzP/MzMz/zMz
+        M/8zMzP/MzMz/zMzM/8zMzP/MzMz/zMzM/8zMzP/MzMz/zMzM/8zMzP/MzMz/zMzM/8zMzNAMzMzADMz
+        MwAzMzMAMzMzADMzMwAzMzMAMzMzXDMzM/8zMzP/MzMzoDMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMz
+        MwAzMzNcMzMz/zMzM/8zMzOgMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMz
+        MwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzNcMzMz/zMzM/8zMzOgMzMzADMzMwAzMzMAMzMzADMz
+        MwAzMzMAMzMzADMzM1wzMzP/MzMz/zMzM6AzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMz
+        MwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMzM1wzMzP/MzMz/zMzM6AzMzMAMzMzADMz
+        MwAzMzMAMzMzADMzMwAzMzMAMzMzUDMzM+AzMzPgMzMzujMzMwAzMzMAMzMzADMzMwAzMzMAMzMzFzMz
+        MyAzMzMgMzMzCDMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzXDMzM/8zMzP/MzMz/jMz
+        M/wzMzP8MzMz/DMzM/wzMzP8MzMz/DMzM/wzMzP8MzMz/DMzM/wzMzP8MzMz/DMzM/wzMzP8MzMz/DMz
+        M/wzMzP+MzMz/zMzM/8zMzNAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzNcMzMz/zMz
+        M/8zMzP/MzMz/zMzM/8zMzP/MzMz/zMzM/8zMzP/MzMz/zMzM/8zMzP/MzMz/zMzM/8zMzP/MzMz/zMz
+        M/8zMzP/MzMz/zMzM/8zMzP/MzMz/zMzM0AzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMz
+        M1wzMzP/MzMz/zMzM/8zMzP/MzMz/zMzM/8zMzP/MzMz/zMzM/8zMzP/MzMz/zMzM/8zMzP/MzMz/zMz
+        M/8zMzP/MzMz/zMzM/8zMzP/MzMz/zMzM/8zMzP/MzMzQDMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMz
+        MwAzMzMAMzMzXDMzM/8zMzP/MzMzoDMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMz
+        MwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzO8MzMz/zMzM/8zMzNAMzMzADMzMwAzMzMAMzMzADMz
+        MwAzMzMAMzMzADMzMwAzMzNcMzMz/zMzM/8zMzOqMzMzHDMzMxwzMzMcMzMzHDMzMxwzMzMcMzMzHDMz
+        MxwzMzMcMzMzHDMzMxwzMzMcMzMzHDMzMxwzMzMcMzMzHDMzM8MzMzP/MzMz/zMzM0AzMzMAMzMzADMz
+        MwAzMzMAMzMzADMzMwAzMzMAMzMzADMzM1wzMzP/MzMz/zMzM/8zMzP/MzMz/zMzM/8zMzP/MzMz/zMz
+        M/8zMzP/MzMz/zMzM/8zMzP/MzMz/zMzM/8zMzP/MzMz/zMzM/8zMzP/MzMz/zMzM/8zMzP/MzMzQDMz
+        MwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzXDMzM/8zMzP/MzMz/zMzM/8zMzP/MzMz/zMz
+        M/8zMzP/MzMz/zMzM/8zMzP/MzMz/zMzM/8zMzP/MzMz/zMzM/8zMzP/MzMz/zMzM/8zMzP/MzMz/zMz
+        M/8zMzNAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzNQMzMz4DMzM+AzMzPgMzMz4DMz
+        M+AzMzPgMzMz4DMzM+AzMzPgMzMz4DMzM+AzMzPgMzMz4DMzM+AzMzPgMzMz4DMzM+AzMzPgMzMz4DMz
+        M+AzMzPgMzMz4DMzMzgzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMz
+        MwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMz
+        MwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzM6MzMznDMz
+        M5wzMzOcMzMznDMzM5wzMzOcMzMznDMzM5wzMzOcMzMznDMzM5wzMzOcMzMznDMzM5wzMzOcMzMznDMz
+        M5wzMzOcMzMznDMzM5wzMzOcMzMznDMzM5wzMzOcMzMzdTMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMz
+        M2AzMzP/MzMz/zMzM/8zMzP/MzMz/zMzM/8zMzP/MzMz/zMzM/8zMzP/MzMz/zMzM/8zMzP/MzMz/zMz
+        M/8zMzP/MzMz/zMzM/8zMzP/MzMz/zMzM/8zMzP/MzMz/zMzM/8zMzPAMzMzADMzMwAzMzMAMzMzADMz
+        MwAzMzMAMzMzYDMzM/8zMzP/MzMz/zMzM/8zMzP/MzMz/zMzM/8zMzP/MzMz/zMzM/8zMzP/MzMz/zMz
+        M/8zMzP/MzMz/zMzM/8zMzP/MzMz/zMzM/8zMzP/MzMz/zMzM/8zMzP/MzMz/zMzM8AzMzMAMzMzADMz
+        MwAzMzMAMzMzADMzMwAzMzMkMzMzYDMzM2AzMzNgMzMzYDMzM2AzMzNgMzMzYDMzM2AzMzNgMzMzYDMz
+        M2AzMzNgMzMzYDMzM2AzMzNgMzMzYDMzM2AzMzNgMzMzYDMzM2AzMzNgMzMzYDMzM2AzMzNgMzMzSDMz
+        MwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMz
+        MwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMz
+        MwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMz
+        MwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMz
+        MwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMz
+        MwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzADMz
+        MwAzMzMAMzMzADMzMwAzMzMAMzMzADMzMwAzMzMAMzMzAP//////f///5g//w8YD/wPjwfwH4/D4f/H4
+        cf/x/GP/8f4n//D+D//4AAAH+AAAB/gAAAf4/x//+P8f//j/H//4AAAf+AAAH/gAAB/4//8f+P//H/gA
+        AB/4AAAf+AAAH//////wAAAP8AAAB/AAAAf/////////////////////KAAAACAAAABAAAAAAQABAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA==
+</value>
+  </data>
 </root>
